# SonicDNA

./: .gitignore  AUDIO_MATCHING.md  README.md  SonicDNA_project_specs.md  main.py  pyproject.toml  start.bat  start.ps1  start.sh  update.bat  update.ps1  update.py  update.sh
sonicdna/: __init__.py  __main__.py  app.py  cli.py  database.py  feature_schema.py  features.py  indexing.py  platform_actions.py  playback.py  resources.py  search.py  settings.py  themes.py  waveform.py  weighting.py  workers.py
sonicdna/ui/: __init__.py  compact_waveform.py  library_list.py  main_window.py  play_indicator_delegate.py  query_drop_group.py  results_table.py  themed_checkbox.py  themed_icon_button.py  waveform_delegate.py  waveform_loader.py  weights_dialog.py
tests/: conftest.py  test_auto_audition.py  test_compact_waveform.py  test_database.py  test_feature_schema.py  test_indexing.py  test_library_list.py  test_platform_actions.py  test_playback.py  test_query_drop_group.py  test_resources.py  test_results_sorting.py  test_results_table.py  test_settings_persistence.py  test_themes.py  test_ui_smoke.py  test_updater.py  test_volume.py  test_waveform.py  test_weighting.py  test_weights_dialog.py  test_workers.py
themes/: Autumn.qss  Cyber.qss  Dark Gray.qss  Dark.qss  Pastel.qss  System.qss  Warbeats.qss
