[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonicdna"
version = "0.8.2"
description = "Local-first acoustic similarity search for audio samples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.10.2",
    "numpy>=1.26",
    "platformdirs>=4.2",
    "PySide6>=6.7",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "sounddevice>=0.4.7",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
dev = ["mypy>=1.10", "pytest>=8.2", "ruff>=0.5"]
build = ["pyinstaller>=6.8"]

[project.scripts]
sonicdna = "sonicdna.__main__:main"
sonicdna-cli = "sonicdna.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sonicdna"]
artifacts = ["sonicdna-logo.png", "sonicdna.ico"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
